# tswd_toronto_crime

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/00-simulated_data/: simulated_data.csv
data/01-raw_data/: neighbhourhood_crime.parquet  neighbourhood_crime.csv  neighbourhood_profiles.xlsx  ward_census.parquet  ward_names.parquet
data/02-analysis_data/: 00-analysis_data_crime.csv  01-analysis_data_profiles.csv  02-analysis_data_merged.csv  03-cluster_neighbourhoods.csv  04-cluster_crime_rates.csv  05-cluster_evaluation_metrics.csv  analysis_data_crime.csv  analysis_data_profiles.csv  merged_data.csv  neighbourhood_clusters.csv
data/03-table_data/: assault_rate_change.csv  breakenter_rate_change.csv  robbery_rate_change.csv  shooting_rate_change.csv
other/log/: process_log.txt
other/notes/: notes_.txt
other/tables/: cluster_evaluation_metrics.csv  (+1 more)
paper/: paper.qmd  references.bib
scripts/: 00-simulate_data.py  00.0-run_pipeline.py  01-simulated_data_test.py  01.0-simulate_data.py  01.1-simulated_data_test.py  02-download_data.py  02.0-download_data.py  03.0-clean_crime_data.py  03.1-clean_profile_data.py  04-merge_crime_profile.py  04.0-merge_crime_profile.py  04.1-merged_test.py  05-merged_data_test.py  05-merged_test.py  05.0-eda_neighbourhood_clusters.py  06-eda_neighbourhood_clusters.py  06.0-eda_neighbourhood_clusters.py  06.0-table_crime_clusters.py  06.1-eda_crime_clusters.py  07-table_crime_clusters.py  07.0-plot_crime_clusters.py  08-plot_crime_clusters.py  08.0-model_evaluation.py  09-model_evaluation.py
